--- a/lib/finanz_zirkus_web/components/layouts/app.html.heex
+++ b/lib/finanz_zirkus_web/components/layouts/app.html.heex
@@ -1,13 +1,9 @@
-<header class="px-4 sm:px-6 lg:px-8">
+<header class="px-4 sm:px-6 lg:px-8 bg-gray-200">
   <div class="flex items-center justify-between border-b border-zinc-100 py-3 text-sm">
     <div class="flex items-center gap-4">
       <a href="/">
-        <img src={~p"/images/logo.svg"} width="36" />
+        <img src={~p"/images/finanz_logo.png"} width="200" />
       </a>
-      
-      <p class="bg-brand/5 text-brand rounded-full px-2 font-medium leading-6">
-        v<%= Application.spec(:phoenix, :vsn) %>
-      </p>
     </div>
     
     <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
